--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="loginTxtBtn">Login</string>
     <string name="othermethods">Other Methods</string>
     <string name="logout">Logout</string>
+    <string name="google_maps_key">AIzaSyChkd1O_wezit51e8lLIHNdv2NoOtC_duI</string>
 </resources>
