--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="othermethods">Other Methods</string>
     <string name="logout">Logout</string>
     <string name="google_maps_key">AIzaSyChkd1O_wezit51e8lLIHNdv2NoOtC_duI</string>
+    <string name="content_description_media">Trip Image</string>
 </resources>
