--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="logout">Logout</string>
     <string name="google_maps_key">AIzaSyDVh2YvCYg-Mcjn-pfEIxeth4Ey9il9vFA</string>
     <string name="title_activity_maps">Map</string>
+    <string name="content_description_media">trip image</string>
 </resources>
