--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,12 @@
     <string name="menu_history">History</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_logout">Logout</string>
+    <string name="start">Start</string>
+    <string name="username">UserName</string>
+
+    <string name="facebook_app_id">239282907878281</string>
+    <string name="fb_login_protocol_scheme">fb239282907878281</string>
+    <string name="hint_email">Please Enter Your Email Here</string>
+    <string name="hint_password">Please Enter Your Password Here</string>
+
 </resources>
