adding localization and alarm manager with custom service and notification.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="loginTxtBtn">Login</string>
     <string name="othermethods">Other Methods</string>
     <string name="logout">Logout</string>
-    <string name="google_maps_key">AIzaSyChkd1O_wezit51e8lLIHNdv2NoOtC_duI</string>
+    <string name="google_maps_key" translatable="false">AIzaSyChkd1O_wezit51e8lLIHNdv2NoOtC_duI</string>
     <string name="content_description_media">Trip Image</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -32,8 +32,16 @@
     <string name="nav_header_subtitle">user email</string>
     <string name="nav_header_desc">Navigation header</string>
 
-    <string name="menu_upcomingTrips">Upcoming Trips</string>
+    <string name="menu_upcomingTrips" translatable="false">Upcoming Trips</string>
     <string name="menu_history">History</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_logout">Logout</string>
+    <string name="GoToMaps">Go To Maps</string>
+    <string name="tripTitle">trip title</string>
+    <string name="startTrip">Start</string>
+    <string name="Snooze">Snooze</string>
+    <string name="tripDestination">tripDestination</string>
+    <string name="tripSource">source</string>
+    <string name="tripDate">tripDate</string>
+    <string name="tripTime">tripTime</string>
 </resources>
