--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="fb_login_protocol_scheme">fb1417290768615341</string>
     <string name="hint_email">Please Enter Your Email Here</string>
     <string name="hint_password">Please Enter Your Password Here</string>
-    <string name="LBL_REPEAT">Repeat?</string>
+    <string name="LBL_REPEAT">Repeat</string>
 
     <string-array name="repeating_array">
         <item>Hour</item>
