edit trip activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,8 @@
     <string name="addNote">Add</string>
     <string name="show_route">Show Route</string>
 
+    <string name="editnotesBtn">Edit Notes</string>
+    <string name="editbtn">Edit</string>
+
 
 </resources>
