--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="loginTxtBtn">Login</string>
     <string name="othermethods">Other Methods</string>
     <string name="logout">Logout</string>
-    <string name="google_maps_key">AIzaSyDVh2YvCYg-Mcjn-pfEIxeth4Ey9il9vFA</string>
+    <string name="google_maps_key" translatable="false">AIzaSyDVh2YvCYg-Mcjn-pfEIxeth4Ey9il9vFA</string>
     <string name="content_description_media">Trip Image</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -49,8 +49,8 @@
     <string name="start">Start</string>
     <string name="username">UserName</string>
 
-    <string name="facebook_app_id">1417290768615341</string>
-    <string name="fb_login_protocol_scheme">fb1417290768615341</string>
+    <string name="facebook_app_id" translatable="false">1417290768615341</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb1417290768615341</string>
     <string name="hint_email">Please Enter Your Email Here</string>
     <string name="hint_password">Please Enter Your Password Here</string>
     <string name="LBL_REPEAT">Repeat</string>
