--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -77,4 +77,12 @@
     <string name="avgSpeed">السرعة المقدرة</string>
     <string name="shownotes">إظهار الملاحظات</string>
     <string name="okbtn">تم</string>
+    <string name="menu_maps">الخريطة</string>
+    <string name="menu_language">english</string>
+    <string name="add">إضافة فقاعة</string>
+    <string name="save">حفظ</string>
+    <string name="addNote">إضافة</string>
+    <string name="show_route">إظهار المسار</string>
+    <string name="editnotesBtn">تعديل الملاحظات</string>
+    <string name="editbtn">تعديل</string>
 </resources>
