Update Some Features

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -79,7 +79,7 @@
     <string name="okbtn">تم</string>
     <string name="add">إضافة فقاعة</string>
     <string name="save">حفظ</string>
-    <string name="addNote">إضافة</string>
+    <string name="addNote">إضافة ملاحظات</string>
     <string name="show_route">إظهار المسار</string>
     <string name="editnotesBtn">تعديل الملاحظات</string>
     <string name="editbtn">تعديل</string>
