--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
 
     <string name="add">Add Bubble</string>
     <string name="save">Save</string>
-    <string name="addNote">Add</string>
+    <string name="addNote">Add Notes</string>
     <string name="show_route">Show Route</string>
 
     <string name="editnotesBtn">Edit Notes</string>
