--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -89,4 +89,5 @@
     <string name="BackFrom">العودة من </string>
     <string name="AddTime">وقت الرحلة</string>
     <string name="AddDate">تاريخ الرحلة</string>
+    <string name="AddNewNote">أضف ملاحظتك هنا</string>
 </resources>
