--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -14,12 +14,12 @@
     <string name="RBTN_ROUND_TRIP" translatable="false">ذهاب وعودة</string>
     <string name="CANCEL" translatable="false">إلغاء</string>
     <string name="DONE" translatable="false">تم</string>
-    <string name="newuser" translatable="false">مستخدم جديد</string>
+    <string name="newuser" translatable="false">مستخدم جديد ؟</string>
     <string name="register" translatable="false">سجل الأن</string>
     <string name="Email" translatable="false">البريد الإلكتروني</string>
     <string name="password" translatable="false">كلمة المرور</string>
     <string name="registerbtn" translatable="false">سجل الأن</string>
-    <string name="alreadyhaveaccount" translatable="false">هل تمتلك حساب بالفعل</string>
+    <string name="alreadyhaveaccount" translatable="false">هل تمتلك حساب بالفعل ؟</string>
     <string name="loginTxtBtn" translatable="false">تسجيل الدخول</string>
     <string name="othermethods" translatable="false">طرق تسجيل أخرى</string>
     <string name="logout" translatable="false">تسجيل الخروج</string>
@@ -89,4 +89,12 @@
     <string name="BackFrom">العودة من </string>
     <string name="AddTime">وقت الرحلة</string>
     <string name="AddDate">تاريخ الرحلة</string>
+    <string name="addnotehint">اضف ملاحظة جديدة</string>
+
+    <string-array name="repeating_array">
+        <item>ساعة</item>
+        <item>يوم</item>
+        <item>أسبوع</item>
+        <item>شهر</item>
+    </string-array>
 </resources>
