--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="AppName">Trip Tracker</string>
     <string name="AddTime">Trip Time</string>
     <string name="AddDate">Trip Date</string>
+    <string name="addnotehint">Add new note</string>
 
 
 </resources>
